{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 268,
  "lineage": "85d7828a-25ca-1eab-1270-f0554f72f4dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d8dcabd94b895f7",
            "arn": "arn:aws:ec2:us-east-1:723640651983:elastic-ip/eipalloc-07d8dcabd94b895f7",
            "domain": "vpc",
            "id": "eipalloc-07d8dcabd94b895f7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-122-185.compute-1.amazonaws.com",
            "public_ip": "34.198.122.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devsecops-nat-eip",
              "Project": "devsecops"
            },
            "tags_all": {
              "Name": "devsecops-nat-eip",
              "Project": "devsecops"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723640651983:internet-gateway/igw-030994e145dbe0493",
            "id": "igw-030994e145dbe0493",
            "owner_id": "723640651983",
            "tags": {
              "Name": "devsecops-igw",
              "Project": "devsecops"
            },
            "tags_all": {
              "Name": "devsecops-igw",
              "Project": "devsecops"
            },
            "vpc_id": "vpc-005777cf6945a8de9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d8dcabd94b895f7",
            "association_id": "eipassoc-07c695c536a34f571",
            "connectivity_type": "public",
            "id": "nat-03f14786ca53be8dd",
            "network_interface_id": "eni-0563095009fe6da5e",
            "private_ip": "10.0.1.48",
            "public_ip": "34.198.122.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b7e718ada2619c4e",
            "tags": {
              "Name": "devsecops-nat",
              "Project": "devsecops"
            },
            "tags_all": {
              "Name": "devsecops-nat",
              "Project": "devsecops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723640651983:route-table/rtb-0321223a3b1c16627",
            "id": "rtb-0321223a3b1c16627",
            "owner_id": "723640651983",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03f14786ca53be8dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecops-private-rt",
              "Project": "devsecops"
            },
            "tags_all": {
              "Name": "devsecops-private-rt",
              "Project": "devsecops"
            },
            "timeouts": null,
            "vpc_id": "vpc-005777cf6945a8de9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723640651983:route-table/rtb-0aebadf9495128843",
            "id": "rtb-0aebadf9495128843",
            "owner_id": "723640651983",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030994e145dbe0493",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecops-public-rt",
              "Project": "devsecops"
            },
            "tags_all": {
              "Name": "devsecops-public-rt",
              "Project": "devsecops"
            },
            "timeouts": null,
            "vpc_id": "vpc-005777cf6945a8de9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddb24ff0238a4276",
            "route_table_id": "rtb-0321223a3b1c16627",
            "subnet_id": "subnet-00ce42a762a24d589"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac38e3710d8186be",
            "route_table_id": "rtb-0321223a3b1c16627",
            "subnet_id": "subnet-019ad1dcc2322ead6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6f60ec521c008a3",
            "route_table_id": "rtb-0aebadf9495128843",
            "subnet_id": "subnet-0b7e718ada2619c4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2b394638034db9d",
            "route_table_id": "rtb-0aebadf9495128843",
            "subnet_id": "subnet-07d25f7fe21439008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723640651983:security-group/sg-032416db2f647315d",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032416db2f647315d",
            "ingress": [],
            "name": "devsecops-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "723640651983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devsecops-eks-cluster-sg",
              "Project": "devsecops"
            },
            "tags_all": {
              "Name": "devsecops-eks-cluster-sg",
              "Project": "devsecops"
            },
            "timeouts": null,
            "vpc_id": "vpc-005777cf6945a8de9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723640651983:subnet/subnet-00ce42a762a24d589",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ce42a762a24d589",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "723640651983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecops-private-1",
              "Project": "devsecops",
              "kubernetes.io/cluster/devsecops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devsecops-private-1",
              "Project": "devsecops",
              "kubernetes.io/cluster/devsecops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-005777cf6945a8de9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723640651983:subnet/subnet-019ad1dcc2322ead6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019ad1dcc2322ead6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "723640651983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecops-private-2",
              "Project": "devsecops",
              "kubernetes.io/cluster/devsecops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devsecops-private-2",
              "Project": "devsecops",
              "kubernetes.io/cluster/devsecops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-005777cf6945a8de9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723640651983:subnet/subnet-0b7e718ada2619c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7e718ada2619c4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "723640651983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecops-public-1",
              "Project": "devsecops",
              "kubernetes.io/cluster/devsecops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devsecops-public-1",
              "Project": "devsecops",
              "kubernetes.io/cluster/devsecops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-005777cf6945a8de9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723640651983:subnet/subnet-07d25f7fe21439008",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d25f7fe21439008",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "723640651983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecops-public-2",
              "Project": "devsecops",
              "kubernetes.io/cluster/devsecops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devsecops-public-2",
              "Project": "devsecops",
              "kubernetes.io/cluster/devsecops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-005777cf6945a8de9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723640651983:vpc/vpc-005777cf6945a8de9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d44018df841ee610",
            "default_route_table_id": "rtb-0344095cab4274b98",
            "default_security_group_id": "sg-0e297fbd50bde0ab6",
            "dhcp_options_id": "dopt-068e55020a5eddc3b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005777cf6945a8de9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0344095cab4274b98",
            "owner_id": "723640651983",
            "tags": {
              "Name": "devsecops-vpc",
              "Project": "devsecops"
            },
            "tags_all": {
              "Name": "devsecops-vpc",
              "Project": "devsecops"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}